--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Brian Do</a>
+          <a class="navbar-brand" href="/index.html">Brian Do</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -43,7 +43,7 @@
             <li class="active"><a href="/research.html">Research Interests</a></li>
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/software.html">Projects</a></li>
-            <li><a href="/blog">Blog</a></li>
+            <li><li class="active"><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
