--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
       <a class="navbar-brand" href="index.html">Brian Do</a>
       <span class="navbar-brand"> | </span>
       <div class="navbar-nav bd-navbar-nav flex-row">
-          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="publications.html">Publications</a>
-          <a class="nav-item nav-link" href="projects.html">Projects</a>
+          <a class="nav-item nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="/publications.html">Publications</a>
+          <a class="nav-item nav-link" href="/projects.html">Projects</a>
           <a class="nav-item nav-link active" href="/blog/index.html">Blog</a>
       </div>
     </nav>
