--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <a class="nav-item nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="/publications.html">Publications</a>
           <a class="nav-item nav-link" href="/projects.html">Projects</a>
-          <a class="nav-item nav-link active" href="/blog/index.html">Blog</a>
+          <a class="nav-item nav-link active" href="/blog">Blog</a>
       </div>
     </nav>
 
