--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
   <body>
     <!-- Fixed navbar -->
     <nav class="navbar fixed-top navbar-expand flex-md-row navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Brian Do</a>
+      <a class="navbar-brand" href="/blog">Brian Do</a>
       <span class="navbar-brand"> | </span>
       <div class="navbar-nav bd-navbar-nav flex-row">
           <a class="nav-item nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
